--- a/components/navbar.module.css
+++ b/components/navbar.module.css
@@ -4,7 +4,7 @@
   width: 100%;
   height: 70px;
   margin-bottom: 100px;
-  background: linear-gradient(to right, #43616e, #ac3535);
+  background: linear-gradient(to right, #032585, #9eff9b);
   position: fixed;
   top: 0;
 }
@@ -15,7 +15,7 @@
   line-height: 70px;
 }
 .menu h2:hover {
-  color: #4c00ff;
+  color: #810000;
 }
 .menu a {
   text-decoration: none;
@@ -38,7 +38,7 @@
   bottom: -3px;
   right: 264px;
   border-radius: 50%;
-  color: #fff;
+  color: rgb(0, 43, 124);
   font-size: 1.2rem;
   width: 15px;
 }
