--- a/components/productDetails.module.css
+++ b/components/productDetails.module.css
@@ -55,3 +55,14 @@
   color: #fff;
   padding: 4px 8px;
 }
+
+@media (max-width: 870px) {
+  .image {
+    width: 70px;
+  }
+  .container {
+    width: 400px;
+    margin: 120px auto;
+    padding: 0;
+  }
+}
